--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -56,7 +56,7 @@
 }
 
 .docx-template {
-  border: 2px solid #2b579a9c;
+  /* border: 2px solid #2b579a9c; */
   border-radius: 5px;
   margin-bottom: 1px;
 }
@@ -89,7 +89,7 @@
 }
 
 .docx-icon .fa-file-word {
-  margin-right: 0.5rem;
+  /* margin-right: 0.5rem; */
 }
 
 .section-header {
