--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -183,7 +183,7 @@
 
 .floating-buttons {
   position: fixed;
-  top: 10%;
+  top: 10px;
   left: 10px;
   display: flex;
   flex-direction: column;
@@ -210,3 +210,17 @@
   border-radius: 5px;
   padding: 10px;
  }
+
+.buttons-container {
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 10px;
+  border: 1px solid;
+  border-radius: 5px;
+  padding: 4px;
+}
+
+.buttons-container button {
+  margin: 3px;
+}
