--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -222,6 +222,14 @@
   max-width: 15vw;
 }
 
+.outline {
+  margin-bottom: 10px;
+  border: 1px solid;
+  border-radius: 5px;
+  padding: 4px;
+  max-width: 15vw;
+}
+
 .buttons-container button {
   margin: 3px;
 }
