--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -212,7 +212,7 @@
 }
 
 .buttons-container {
-  text-align: left;
+  text-align: center;
   justify-content: center;
   align-items: center;
   margin-bottom: 10px;
