Refactor CSS for Improved Layout and Update DocxTemplate Component
- Updated `.bookmark` class to use flexbox for better alignment of elements.
- Adjusted `.bookmark-icon` to remove unnecessary comments and improve spacing.
- Modified `.table-container` to use column flex-direction and added padding for better layout.
- Introduced `.form-group` class for consistent styling of form elements, ensuring labels and controls are aligned and spaced properly.
- Updated `DocxTemplate.js` to use the new `.form-group` class for form elements, improving the layout and readability.
- Changed label text for the table of contents switch for clarity.

--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -4,6 +4,8 @@
   border: 1px solid #2b579a;
   border-radius: 4px;
   padding: 2px;
+  display: flex;
+  align-items: center;
 }
 
 .bookmark-container {
@@ -13,10 +15,8 @@
 
 .bookmark-icon {
   margin-right: 8px;
-  /* Adjust the spacing as needed. Next change size */
   margin-bottom: 5px;
   font-size: 24px;
-  /* Increase the font size to make the icon larger. */
 }
 
 .greyed-out {
@@ -235,18 +235,27 @@
 
 .table-container {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
 }
 
-.custom-table {
-  width: auto;
-  border-collapse: collapse;
+.form-group {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
 }
 
-.custom-table td {
-  border: none;
-  text-align: left;
-  padding: 2px;
+.form-group label {
+  flex: 1;
+  text-align: right;
+  margin-right: 10px;
+}
+
+.form-group .form-control {
+  flex: 2;
+  max-width: 300px;
 }
 
 .left-align {
