--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -15,7 +15,7 @@
 
 .bookmark-icon {
   margin-right: 8px;
-  margin-bottom: 5px;
+  margin-bottom: 2px;
   font-size: 24px;
 }
 
@@ -29,6 +29,19 @@
   border: 1px solid #d80303be;
   border-radius: 4px;
   padding: 4px;
+  font-size: 14px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 120px;
+  margin-top: -3px;
+}
+
+.pdf-icon-content {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
 
 .section-icon {
